cambio de url después del fork de https://github.com/afipsdk/afip.php

--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "afipsdk/afip.php",
+    "name": "carlosjacobs/afip.php",
     "type": "library",
-    "description": "Libreria para usar los Web Services de AFIP (Argentina) ",
+    "description": "Libreria para usar los Web Services de AFIP (Argentina).  Este repositorio es un fork de https://github.com/afipsdk/afip.php",
     "keywords": ["afip","facturacion-electronica","gratis","soap","cae","padron","contribuyente","libreria"],
-    "homepage": "https://github.com/afipsdk/afip.php",
+    "homepage": "https://github.com/carlosjacobs/afip.php",
     "license": "MIT",
     "require": {
         "php": ">=5.3.3"
     },
     "authors": [
         {
-            "name": "Afip SDK",
-            "email": "afipsdk@gmail.com"
+            "name": "Consultora Grada",
+            "email": "carlos.jacobs@grada.com.ar"
         }
     ],
     "autoload": {
